<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">


        <TextView
            android:id="@+id/tv_edit_albaran"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:text="@string/editAlbaran"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal_200"/>

        <Spinner
            android:id="@+id/spinner_edit_usuario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinner_edit_maquina"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_edit_contador"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:ems="10"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:hint="@string/contador"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"/>

        <EditText
            android:id="@+id/et_edit_dinero"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:ems="10"
            android:inputType="none|numberDecimal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:hint="@string/dinero"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"/>

        <EditText
            android:id="@+id/et_edit_fecha"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:ems="10"
            android:inputType="textWebEditText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:hint="@string/fecha_albaran"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"/>

        <EditText
            android:id="@+id/et_edit_estado"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:hint="@string/estado_maquina"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"/>

        <Spinner
            android:id="@+id/spinner_edit_ali"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_edit_cantidad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:ems="10"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:hint="@string/cantidad_alimento"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"/>

        <Button
            android:id="@+id/btn_edit_albaran"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btn_editar"
            app:cornerRadius="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>