<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#202732">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/logo_round" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_name_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_resgistrarse_nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_email_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_user_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            android:entries="@array/usuarios"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_pass_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_contraseña"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_confirmPass_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_confirmar_contraseña"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_create_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/btn_confirmar"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_back_r"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/btn_volver"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>