<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="668dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_crear_albaran"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            android:text="@string/tv_añadir_albaran"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_usuario_alba"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:entries="@array/usuario"
            android:background="@drawable/spinner_register"/>

        <Spinner
            android:id="@+id/spinner_maquina_alba"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            android:entries="@array/maquinas"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_contador"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.80"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/contador"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_dinero"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.80"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/dinero"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_fecha_creacion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.80"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/fecha_albaran"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_estado_maquina"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.80"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/estado_maquina"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_alimentos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_register"
            android:entries="@array/alimentos"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_cantidad_alimento"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.80"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/cantidad_alimento"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant"
            tools:ignore="TouchTargetSizeCheck" />


        <Button
            android:id="@+id/btn_add_inci"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btn_añadir"
            app:cornerRadius="16dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>