<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="#202732">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/logo_round"
                tools:src="@mipmap/logo_round" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_email_l"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant" />

        <EditText
            android:id="@+id/et_pass_l"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/editText_contraseña"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/editText_login_entrar" />

        <Button
            android:id="@+id/btn_register"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="347dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:text="@string/editText_login_registrarse"
            app:cornerRadius="16dp"
            app:strokeColor="@color/design_default_color_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>