<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="442dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_incidencia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tv_añadir_incidencia"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_usuario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            android:background="@drawable/spinner_register"
            android:entries="@array/usuario"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_incidencia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            android:background="@drawable/spinner_register"
            android:entries="@array/incidencias"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_nombre_alimento"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/descripcion_incidencia"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant" />

        <EditText
            android:id="@+id/et_precio_alimento"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/design_default_color_secondary_variant" />


        <Button
            android:id="@+id/btn_add_alimento"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btn_añadir"
            app:cornerRadius="16dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

